# conduit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  test-api.js  tsconfig.json
conduit-backend/: Cargo.toml
conduit-backend/src/: lib.rs
conduit-backend/src/api/: openai.rs  server.rs  state.rs
docs/: sample.md
src/: ApiTest.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/docs/: 22c4f236-fe8f-42fe-8a6b-4d747d955f99.md  687eaadb-a511-432e-ba22-f56597d14ef5.md  73c2d2f4-c9fa-4d77-b036-c42f6fb906c2.md  9f2a58b1-bf1d-413d-9fa6-dce3b2e02fb6.md  a130ce08-9e25-4f80-9ca6-e78ac9d5c778.md  a91611ca-4d84-48c2-b0ab-872c5d5fd3b3.md  b0fe0bab-4517-44ec-8748-d9732af79d52.md  bbb8a438-5226-447b-9002-3283f53b7144.md  beff413d-9afc-417f-a4be-8068c6916cf3.md  ca0d61a8-9bc9-48ed-a15a-0af42add8c06.md  d8988d7a-cae6-48b9-a630-468775d9161f.md
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/api/: mod.rs  openai.rs
src-tauri/src/memory/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/proxy/: route.ts
src/app/components/: ApiTest.tsx
src/components/ui/: button.tsx  card.tsx  tabs.tsx
