[package]
name = "conduit-backend"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible API server with memory management"
authors = ["Conduit Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/conduit"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
markdown = "1.0.0-alpha.23"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
rand = "0.8"
futures = "0.3"
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "conduit_backend"
crate-type = ["rlib", "cdylib"]
